# tire-pressure-monitoring-python-kata

./: Makefile  README.md  alarm.py  pyproject.toml  sensor.py  test_alarm.py  test_something.py  test_tire_pressure_monitoring.py  tire_pressure_monitoring.py
